--- a/money_management/models/config/config.ini
+++ b/money_management/models/config/config.ini
@@ -3,5 +3,5 @@ host="localhost"
 port="3306"
 name="money_management"
 user="money_management"
-pass="1q2w3e4r"
+pass="QuJ(8R!nCqUpA@hB"
 type="mysql"
